<resources>
    <string name="cast_app_id">248F0F11</string>
    <string name="app_name">CastAny</string>
    <string name="splash_app_name">Cast Any - Projector and Mirroring</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dash">Dashboard</string>
    <string name="menu_video">Videos</string>
    <string name="menu_audio">Audios</string>
    <string name="menu_scan_device">Scan Device</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_browse_cast">Cast on Other Devices</string>

    <string name="completion_page"></string>
    <string name="preview">Preview</string>
    <string name="images">Photos</string>
    <string name="videos">Videos</string>
    <string name="audios">Audios</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="more_app">More App</string>
    <string name="rate_app">Rate App</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="dont_ask_permission_header">Please allow required Permissions to use the app. Go to App->Permissions and enable all Permissions. </string>
    <string name="permission_header">Must require Permissions in order for app to work. </string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>
    <string name="screen_mirror">Screen Mirroring</string>
    <string name="screen_mirror_info">Share your phone\’s screen to \nyour TV in real time</string>
    <string name="start_cast">Cast Now</string>
    <string name="start">Start</string>
    <string name="tv_cast">Select Media to Cast</string>
    <string name="tv_cast_subtitle">Cast anything on a bigger screen</string>
    <string name="cast_photos">Cast Photos</string>
    <string name="cast_videos">Cast Videos</string>
    <string name="cast_audios">Cast Audios</string>
    <string name="premium_upgrade">Premium Upgrade</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="required_wifi_network">Required wifi network</string>
    <string name="connect_to_wifi">Connect to a wifi device or hotspot</string>
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="queue_item_added_to_play_next">An item was added to play next</string>
    <string name="queue_item_added_to_queue">An item was added to the queue</string>
    <string name="media_route_menu_title">Play On</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="no_device_connected">No Devices Connected</string>
    <string name="connected">%s Connected</string>
    <string name="connected_with">Connected with %s</string>
    <string name="connect_to_chrome_cast">Connect to Smart TV</string>
    <string name="connect_to_chrome_cast_subheading">Make sure your TV is turned on \nand connected to the same WiFi network</string>
    <string name="connect_to_wifi_text">You are offline. Please open your phone settings \nand connect to an active WiFi Network.</string>
    <string name="no_device_found">No device found for connection</string>
    <string name="no_device_found_subtext">Looks like your phone and tv are not connected \non same network. Open WiFi settings and connect \nboth devices to the same network</string>
    <string name="open_wifi_settings">Open Wifi settings</string>
    <string name="available_devices">Available Devices</string>
    <string name="searching_for_devices">Searching for devices</string>
    <string name="connect_to">Connect %s</string>
    <string name="disconnect_to">Disconnect %s</string>
    <string name="queued">Queued</string>
    <string name="slideshow">Slideshow</string>
    <string name="start_slideshow">Start Slideshow</string>
    <string name="stop_slideshow">Stop Slideshow</string>
    <string name="no_videos_found">No videos found</string>
    <string name="no_audios_found">No audios found</string>
    <string name="sort_by_date">Sort by :Date</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="queue_tag_item">queue-tag-item</string>
    <string name="queue_empty">Queue is empty!</string>
    <string name="all_photos">All Photos</string>
    <string name="items_selected">Selected(%d)</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="connect_to_cast_device_text">Please connect to a device</string>
    <string name="accept_privacy_policy">Please accept privacy policy conditions</string>
    <string name="cast_your_media">Cast your Media</string>
    <string name="cast_prompt_mssg">Make sure your phone and casting devices are connected to the same WiFi network</string>
    <string name="cast_on_smart_tv">Cast on \nSmart TV</string>
    <string name="cast_on_other_tv">Cast on \nOther Devices</string>
    <string name="cast_to_other_device">Cast to other device</string>
    <string name="browser_text1">Make sure your phone and casting devices are connected to the same WiFi network</string>
    <string name="browser_text2">Share and open this link on other devices</string>
    <string name="check_preview">Check Preview</string>
    <string name="share">Share</string>
    <string name="share_link">Share link</string>
    <string name="replay">Replay</string>
    <string name="continue_with_free_trial">Continue free trial</string>
    <string name="go_premium">Go premium</string>
    <string name="go_pro">Go Pro</string>
    <string name="pro_feature">Pro Feature</string>
    <string name="watch_to_cast">Watch to Cast</string>
    <string name="pro_feature_sub_heading1">Watch an Ad to to use this feature. Go Pro to unlock limitless casting.</string>
    <string name="pro_feature_sub_heading2">Go Pro to unlock this feature &amp; use it without limits</string>
    <string name="connection_closed">Connection closed</string>

</resources>