<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dash">

    <fragment
        android:id="@+id/nav_dash"
        android:name="com.example.projectorcasting.ui.fragments.DashboardFragment"
        android:label="@string/menu_dash"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_image"
        android:name="com.example.projectorcasting.ui.fragments.ImagesFragment"
        android:label="@string/images"
        tools:layout="@layout/fragment_images">

        <action
            android:id="@+id/action_image_to_preview"
            app:destination="@id/nav_image_preview"
            app:enterAnim="@anim/slide_up"
            app:exitAnim="@anim/slide_down"
            app:popExitAnim="@anim/slide_down"/>

    </fragment>

    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.projectorcasting.ui.fragments.VideosFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_videos" />

    <fragment
        android:id="@+id/nav_audio"
        android:name="com.example.projectorcasting.ui.fragments.AudioFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_audio" />

    <fragment
        android:id="@+id/nav_scan_device"
        android:name="com.example.projectorcasting.ui.fragments.ScanDeviceFragment"
        android:label="@string/menu_scan_device"
        tools:layout="@layout/fragment_scandevice"/>
    <fragment
        android:id="@+id/nav_queue"
        android:name="com.example.projectorcasting.ui.fragments.QueueFragment"
        android:label="@string/menu_queue"
        tools:layout="@layout/fragment_queue" />

    <fragment
        android:id="@+id/nav_image_preview"
        android:name="com.example.projectorcasting.ui.fragments.ImagePreviewFragment"
        android:label="@string/preview"
        tools:layout="@layout/fragment_image_preview">

        <argument
            android:name="from_slideshow"
            app:argType="boolean"/>

        <argument
            android:name="file_position"
            app:argType="integer" />

    </fragment>

    <fragment
        android:id="@+id/nav_browse_cast"
        android:name="com.example.projectorcasting.ui.fragments.BrowseCastFragment"
        android:label="@string/menu_browse_cast"
        tools:layout="@layout/fragment_browse_cast">

        <action
            android:id="@+id/action_browse_to_preview"
            app:destination="@id/nav_web_preview"/>

    </fragment>

    <fragment
        android:id="@+id/nav_web_preview"
        android:name="com.example.projectorcasting.ui.fragments.WebViewFragment"
        android:label="@string/preview"
        tools:layout="@layout/fragment_webview">

        <argument
            android:name="url"
            app:argType="string"/>

    </fragment>


</navigation>