<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl_root"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_heading"
        android:layout_marginTop="@dimen/padding20dp"
        android:layout_marginBottom="@dimen/padding10dp"
        android:textSize="@dimen/textsize20sp"
        android:gravity="center"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/heading"
        android:layout_centerHorizontal="true"
        android:text="@string/connect_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginRight="@dimen/padding10dp"
        android:layout_marginLeft="@dimen/padding10dp"
        android:background="#1A000000"
        android:layout_below="@+id/tv_heading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding1dp"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_below="@+id/tv_heading"
        android:layout_marginTop="@dimen/padding30dp"
        android:layout_marginLeft="@dimen/padding30dp"
        android:layout_marginBottom="@dimen/padding20dp"
        android:padding="@dimen/padding5dp"
        android:textColor="#80000000"
        android:textSize="@dimen/textsize16sp"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_action"
        android:layout_below="@+id/tv_heading"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/padding30dp"
        android:layout_marginTop="@dimen/padding30dp"
        android:layout_marginBottom="@dimen/padding20dp"
        android:padding="@dimen/padding5dp"
        android:textColor="@color/text_green"
        android:fontFamily="@font/inter_semibold"
        android:textSize="@dimen/textsize16sp"
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</RelativeLayout>