<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl_root"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_heading"
        android:layout_marginTop="@dimen/padding20dp"
        android:layout_marginBottom="@dimen/padding10dp"
        android:textSize="@dimen/textsize20sp"
        android:gravity="center"
        android:fontFamily="@font/inter_medium"
        android:textColor="@color/heading"
        android:layout_centerHorizontal="true"
        android:text="@string/cast_your_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_sub_heading"
        android:layout_marginBottom="@dimen/padding10dp"
        android:layout_below="@+id/tv_heading"
        android:textSize="@dimen/textsize16sp"
        android:gravity="center"
        android:fontFamily="@font/inter_regular"
        android:layout_marginRight="@dimen/padding20dp"
        android:layout_marginLeft="@dimen/padding20dp"
        android:textColor="@color/heading"
        android:layout_centerHorizontal="true"
        android:text="@string/cast_prompt_mssg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/rl_connection_layout"
        android:layout_marginTop="@dimen/padding10dp"
        android:layout_below="@+id/tv_sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_cast_tv"
            android:layout_toLeftOf="@+id/v_center"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_cast_tv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_smart_tv_text"
                android:fontFamily="@font/inter_semibold"
                android:textAlignment="center"
                android:textColor="@color/heading"
                android:textSize="@dimen/textsize16sp"
                android:text="@string/cast_on_smart_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:id="@+id/v_center"
            android:layout_centerInParent="true"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <LinearLayout
            android:id="@+id/ll_cast_other_device"
            android:layout_toRightOf="@+id/v_center"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                app:srcCompat="@drawable/ic_cast_other_device_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_other_tv_text"
                android:fontFamily="@font/inter_semibold"
                android:textAlignment="center"
                android:textColor="@color/heading"
                android:textSize="@dimen/textsize16sp"
                android:text="@string/cast_on_other_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:visibility="visible"
        android:id="@+id/tv_cancel"
        android:layout_below="@+id/rl_connection_layout"
        android:layout_marginTop="@dimen/padding30dp"
        android:layout_marginBottom="@dimen/padding20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dash_mirror_start_bg"
        android:backgroundTint="#E0E0E0"
        android:paddingTop="@dimen/padding12dp"
        android:paddingBottom="@dimen/padding12dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginRight="@dimen/padding30dp"
        android:layout_marginLeft="@dimen/padding30dp"
        android:textSize="@dimen/textsize16sp"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</RelativeLayout>