<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/padding20dp"
            android:padding="@dimen/padding5dp"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/audios"
            android:textColor="@color/heading"
            android:textSize="@dimen/textsize20sp" />

        <TextView
            android:id="@+id/tv_queued"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padding20dp"
            android:drawableLeft="@drawable/ic_queued_icon"
            android:drawablePadding="@dimen/padding5dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/queued"
            android:textColor="@color/text_orange"
            android:textSize="@dimen/textsize15sp"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/cast_mini_controller"
        android:layout_below="@+id/rl_toolbar"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/rl_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding10dp"
            android:background="#0D000000"
            android:padding="@dimen/padding10dp"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding10dp"
                android:text="@string/sort_by_date"
                android:textColor="@color/heading"
                android:textSize="@dimen/textsize16sp" />

            <LinearLayout
                android:id="@+id/ll_sorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padding10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_sorting_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_ascending_icon" />

                <TextView
                    android:id="@+id/tv_sorting_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/padding10dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/ascending"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/textsize16sp" />

            </LinearLayout>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_audio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_connected"
            android:layout_below="@+id/rl_sorting"
            android:clipToPadding="false"
            android:padding="@dimen/padding10dp" />

        <RelativeLayout
            android:id="@+id/rl_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/ll_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding10dp"
                android:layout_marginBottom="@dimen/padding10dp"
                android:background="@drawable/splash_btn_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding15dp"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/padding15dp"
                android:paddingBottom="8dp"
                android:visibility="gone">

                <View
                    android:layout_width="@dimen/padding10dp"
                    android:layout_height="@dimen/padding10dp"
                    android:layout_marginRight="@dimen/padding5dp"
                    android:background="@drawable/active_dot_bg" />

                <TextView
                    android:id="@+id/tv_connected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/padding10dp"
                android:layout_marginBottom="@dimen/padding10dp"
                android:background="@drawable/cast_btn_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padding15dp"
                android:paddingTop="8dp"
                android:paddingRight="@dimen/padding15dp"
                android:paddingBottom="8dp"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_casting"
                    app:srcCompat="@drawable/ic_cast_disable"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginLeft="@dimen/padding15dp"
                    android:id="@+id/iv_browser"
                    android:layout_toRightOf="@+id/iv_casting"
                    app:srcCompat="@drawable/ic_browser_disable"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginLeft="@dimen/padding15dp"
                    android:layout_toRightOf="@+id/iv_browser"
                    app:srcCompat="@drawable/ic_arrow_orange"
                    android:rotation="180"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:textColor="#FC654B" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_no_audios_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_audios_found"
        android:textSize="@dimen/textsize20sp"
        android:visibility="visible" />

    <fragment
        android:id="@+id/cast_mini_controller"
        class="com.google.android.gms.cast.framework.media.widget.MiniControllerFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:castShowImageThumbnail="true" />

</RelativeLayout>